Add an example carousel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tahoni library</title>
+
+    <link rel="icon" type="image/png" href="/tahoni-icon.png" />
+
+    <title>tahoni-lib</title>
+    <meta name="author" content="tahoni" />
+    <meta name="description" content="Leoni Lubbinge's React Library" />
   </head>
   <body>
     <div id="root"></div>
